# ValidFi

./: .gitignore  DEPLOYMENT.md  README.md
contracts/: Cargo.toml
contracts/src/: access_control.rs  auditing.rs  benchmarks.rs  comprehensive_tests.rs  data_sharing.rs  errors.rs  events.rs  health_authority.rs  health_authority_tests.rs  identity_registry.rs  integration_tests.rs  lib.rs  storage.rs  test.rs  types.rs  upgrade.rs  upgrade_tests.rs  verification.rs
contracts/test_snapshots/integration_tests/: test_full_credential_lifecycle.1.json  test_get_revocation_status_nonexistent_panics.1.json  test_get_verification_by_identity.1.json  test_get_verification_status.1.json  test_is_verification_revoked_nonexistent_panics.1.json  test_is_verification_valid.1.json  test_is_verification_valid_nonexistent_panics.1.json  test_multiple_verifications_independent_revocation.1.json  test_revocation_list_maintenance.1.json  test_revocation_status_updates.1.json  test_revoke_nonexistent_verification_panics.1.json  test_revoke_rejected_verification.1.json  test_revoke_verification_credential.1.json  test_submit_and_approve_verification.1.json  test_submit_and_reject_verification.1.json
contracts/test_snapshots/upgrade_tests/: test_cancel_upgrade_panics_for_non_admin.1.json  test_cancel_upgrade_removes_pending_upgrade.1.json  test_emergency_pause_panics_for_non_admin.1.json  test_emergency_pause_upgrades.1.json  test_execute_upgrade_after_timelock.1.json  test_execute_upgrade_panics_before_timelock.1.json  test_execute_upgrade_panics_for_non_admin.1.json  (+38 more)
zk/: .gitignore  (+3 more)
(+149 files in other folders)
